# rids

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config_example.json  detect.sh  detection.service  install.sh  network_capture.py  network_capture_test.py  packet_filter.py  packet_filter_test.py  pyproject.toml  rids.py  rids.service
rids/: config.py  event.py  iocs.py  network_capture.py  observations.py  rids.py  rules.py
rids/ioc_formats/: allowed_sni_port.py  bad_ip_list.py
rids/iocs/: allowed_sni_port.py  bad_ip_list.py  iocs.py
rids/monitors/: ip_monitor.py  tls_monitor.py  tshark.py
rids/rules/: ip_matcher.py  ruleset.py  tls_matcher.py
tests/: compromised_ip_test.py  ip_matcher_test.py  network_capture_test.py  rules_test.py  tls_matcher_test.py
