[project]
name = "rids"
version = "0.1.0"
description = "Remote Intrusion Detection System"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "absl-py",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["pyrids"]

[project.scripts]
rids = "rids.rids:main"

[project.urls]
repository = "https://github.com/Jigsaw-Code/rids"
